2010-03-03  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43177
	* var-tracking.c (loc_cmp): Don't assert VALUEs have the same mode.
	(VAL_EXPR_HAS_REVERSE): Define.
	(reverse_op): New function.
	(add_stores): For reversible operations add an extra MO_VAL_USE.

2010-03-02  Jason Merrill  <jason@redhat.com>

	* c-pretty-print.c (pp_c_specifier_qualifier_list): Print vector size.

2010-03-02  Eric Botcazou  <ebotcazou@adacore.com>

	* config.gcc (sparc-*-linux*): Do not include sparc/gas.h.
	(sparc64-*-linux*): Likewise.
	(sparc64-*-solaris2*): Include assembler files before linker ones.
	(sparc-*-solaris2*): Simplify and reorder to match previous case.
	* config/sparc/gas.h: Delete.
	* config/sparc/sol2-64.h: Add copyright notice.
	* config/sparc/sol2-gas-bi.h: Likewise.
	* config/sparc/sol2-gld.h: Likewise.
	* config/sparc/sysv4.h (TARGET_ASM_NAMED_SECTION): Delete.
	* config/sparc/sol2.h (TARGET_ASM_NAMED_SECTION): Redefine.
	* config/sparc/sol2-gas.h (TARGET_ASM_NAMED_SECTION): Likewise.
	* config/sparc/sparc.c (TARGET_ASM_ALIGNED_SI_OP): Never redefine.
	(sparc_elf_asm_named_section): Rename into...
	(sparc_solaris_elf_asm_named_section): ...this.  Always define.

2010-03-02  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (override_options): Fix -mtune error message.

2010-03-02  Jeff Law  <law@redhat.com>

	PR middle-end/42431
	* reload1.c (rtx_p, substitute_stack): Declare.
	(substitute): Record addresses of changed rtxs.
	(gen_reload_chain_without_interm_reg_p): Don't use copy_rtx anymore.
	Restore the original rtx when complete.
	(reload): Free subsitute_stack when complete.

2010-03-02  Janis Johnson  <janis187@us.ibm.com>

	* doc/gccint.texi (menu): Add Testsuites as a chapter.
	* doc/sourcebuild.texi (Testsuites): Move up a level to be a
	new chapter.
	(Test Idioms, Test Directives, Ada Tests, C Tests, libgcj Tests,
	LTO Testing, gcov Testing, profopt Testing, compat Testing,
	Torture Tests): Change from subsection to section.
